--- a/frontend/src/components/Buy.module.css
+++ b/frontend/src/components/Buy.module.css
@@ -18,6 +18,7 @@
     margin-left: 5vh;
     display: flex;
     /* Makes the product items align horizontally */
+    justify-content: center;
     overflow-x: auto;
     /* Enables horizontal scrolling */
     padding-bottom: 10px;
